--- a/bat/rd-mailform.config.json
+++ b/bat/rd-mailform.config.json
@@ -1,8 +1,8 @@
 {
-  "useSmtp": false,
-  "host": "stmp.gmail.com",              
-  "port": 465,													 
-  "username": "demo@gmail.com",					 
-  "password": "demopassword",						 
-  "recipientEmail":  "demo@gmail.com"		 
+  "useSmtp": true,
+  "host": "stmp.gmail.com",
+  "port": 465,
+  "username": "shest28@gmail.com",
+  "password": "adgjmptw12345",
+  "recipientEmail":  "shest28@gmail.com"
 }
