--- a/bat/rd-mailform.config.json
+++ b/bat/rd-mailform.config.json
@@ -1,7 +1,7 @@
 {
-  "useSmtp": true,
+  "useSmtp": false,
   "host": "stmp.gmail.com",
-  "port": 465,
+  "port": 25,
   "username": "shest28@gmail.com",
   "password": "adgjmptw12345",
   "recipientEmail":  "shest28@gmail.com"
