--- a/bat/rd-mailform.config.json
+++ b/bat/rd-mailform.config.json
@@ -2,7 +2,7 @@
   "useSmtp": false,
   "host": "stmp.gmail.com",
   "port": 25,
-  "username": "shest28@gmail.com",
-  "password": "adgjmptw12345",
-  "recipientEmail":  "shest28@gmail.com"
+  "username": "",
+  "password": "",
+  "recipientEmail":  ""
 }
